Add unit test for UserMapper + add needed dependencies to pom.xml